2021-11-17 Roy Hills <Roy.Hills@hotmail.com>

	* Use getifaddrs() to obtain the interface IP address if it is available
	  and pcap_findalldevs() fails to find the address.

	  This is typically needed for device aliases such as "eth0:0" on Linux
	  which are not supported by pcap_findalldevs() and would previously
	  cause an error.

	* Increment version number to 1.9.8 to reflect code and autoconf
	  changes.

2021-09-09 Roy Hills <Roy.Hills@hotmail.com>

	* Retry sending an ARP packet if the packet send function fails with
	  EAGAIN instead of aborting with an error message. High packet send
	  rates can cause sendto() to fail occasionally with EAGAIN due to
	  temporary resource starvation. Thanks to gessel for reporting this
	  problem.

	  --retry-send (default 3) specifies the number of retries.
	  --retry-send-interval (default 10ms) sets the delay between retries.

	* Minor code cleanup to fix spelling, remove trailing whitespace,
	  fix shellcode warnings and update license file.  Thanks to a1346054
	  for the pull request.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2020-07-05 Roy Hills <Roy.Hills@hotmail.com>

	* README.md, arp-fingerprint.1, arp-scan.1, get-iab.1, get-oui.1,
	  mac-vendor.5, mac-vendor.txt: Update wiki references to use
	  new URL http://www.royhills.co.uk/wiki/

2019-10-24 Roy Hills <Roy.Hills@hotmail.com>

	* configure.ac: Increment version number to 1.9.7 in preparation for
	  new release.

	* configure.ac, acinclude.m4: Tidy up: remove obsolescent and unused
          autoconf macros.

	* Modified copyright statement in files to include up to 2019.

2019-10-20 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Call the pcap functions before get_hardware_address() to
	  ensure lack of permissions is reported by pcap_activate() rather
          than by the link specific get_hardware_address().  This will give
	  consistent error messages across different platforms.
